--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -37,6 +37,7 @@
 
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
+        <a href="https://gussj.github.io">https://gussj.github.io</a>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
