--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -255,6 +255,7 @@
       </footer>
 
     </div>
+    <script src="//code.tidio.co/ypiyjtwsga2ttrlphizlogucuecag4m3.js" async></script>
 
   </body>
 
