--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,6 +38,10 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
         <a href="https://gussj.github.io">https://gussj.github.io</a>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/gustavosj?hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
