--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -39,7 +39,7 @@
           {{ site.resume_header_intro }}
         <a href="https://gussj.github.io">https://gussj.github.io</a>
         <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/gustavosj?hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/gustavosj?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         <!-- Calendly inline widget end -->
         </div>
