--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,10 +38,11 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
         <a href="https://gussj.github.io">https://gussj.github.io</a>
-        <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/gustavosj?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:320px;height:630px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-        <!-- Calendly inline widget end -->
+        <!-- Calendly badge widget begin -->
+       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+       <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/gustavosj/30min?hide_event_type_details=1&hide_gdpr_banner=1', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: false }); }</script>
+       <!-- Calendly badge widget end -->
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
