--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -47,6 +47,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
+        <a href="mailto:gustavosj.js@gmail.com" class="contact-button no-print" itemprop="email">Email me</a>
         <a href="https://gussj.github.io/cv.pdf" class="contact-button no-print" itemprop="email">Download PDF</a>
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
