--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -261,7 +261,19 @@
       </footer>
 
     </div>
-    <script src="//code.tidio.co/ypiyjtwsga2ttrlphizlogucuecag4m3.js" async></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/620f05f01ffac05b1d7a782f/1fs5auda8';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
 
   </body>
 
